ingresses/gw.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gw.apps.k0.sys.one.pl
spec:
  host: gw.apps.k0.sys.one.pl
  port:
    targetPort: gw-service-ssl
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: gw-ssl-service
    weight: 100
  wildcardPolicy: None

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gw-ui.apps.k0.sys.one.pl
spec:
  host: gw-ui.apps.k0.sys.one.pl
  port:
    targetPort: gw-ui
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gw-ui-service
    weight: 100
  wildcardPolicy: None

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gw-admin-ui.apps.k0.sys.one.pl
spec:
  host: gw-admin-ui.apps.k0.sys.one.pl
  port:
    targetPort: gw-admin-ui
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gw-admin-ui-service
    weight: 100
  wildcardPolicy: None
