ingresses/spa.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spa.vger.sys.one.pl
spec:
  host: spa.vger.sys.one.pl
  port:
    targetPort: http-web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: spa-service
    weight: 100
  wildcardPolicy: None
